--- a/book/labs/lab_01.ipynb
+++ b/book/labs/lab_01.ipynb
@@ -35,12 +35,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "2",
       "metadata": {
-        "id": "2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2",
+        "outputId": "ef6b3af6-d5f7-4470-f328-836e9a2ea3a4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "------------------------------------------------\n",
+            "City statistics:\n",
+            "------------------------------------------------\n",
+            "City: New York City\n",
+            "Total Population: 8,336,817\n",
+            "Population density: 10,636.41\n",
+            "Latitude: -74.00600\n",
+            "Longitude: 40.71280\n",
+            "------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# **********************************************************************************************\n",
         "# * Name:   exercise_01.py\n",
@@ -102,13 +122,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "4",
       "metadata": {
-        "id": "4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4",
+        "outputId": "6c8d4997-2d4c-4e0e-c364-c6a81a89bd58"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normal case: San Francisco\n",
+            "Uppercase: SAN FRANCISCO\n",
+            "Lowercase: san francisco\n",
+            "Replace the first part: Los Francisco\n"
+          ]
+        }
+      ],
+      "source": [
+        "# **********************************************************************************************\n",
+        "# * Name:   exercise_02.py\n",
+        "# * Author: Teo Espero\n",
+        "# *         MAS-GIT\n",
+        "# * Date written:   01/17/2026\n",
+        "# * Description:    This is to demonstrate the use of variables and data types. For this\n",
+        "# *                 exercise we will use strings, and on how to use Python to manipulate it.\n",
+        "# **********************************************************************************************\n",
+        "\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - Declare our data types\n",
+        "# -------------------------------------------------------\n",
+        "california_city = \"San Francisco\"\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - Print the city name and manipulate the string\n",
+        "# -------------------------------------------------------\n",
+        "print(f\"Normal case: {california_city}\")\n",
+        "print(f\"Uppercase: {california_city.upper()}\")\n",
+        "print(f\"Lowercase: {california_city.lower()}\")\n",
+        "print(f\"Replace the first part: {california_city.replace(\"San\", \"Los\")}\")\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - EOF\n",
+        "# -------------------------------------------------------"
+      ]
     },
     {
       "cell_type": "markdown",
