--- a/book/labs/lab_01.ipynb
+++ b/book/labs/lab_01.ipynb
@@ -196,13 +196,102 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "6",
       "metadata": {
-        "id": "6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6",
+        "outputId": "6b94bb78-0d74-4ae8-b790-ffa6a00cd9cc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--------------------------------------------------\n",
+            "Original list of cities:\n",
+            "1: New York City: Latitude 40.7128, Longitude -74.006\n",
+            "2: Los Angeles: Latitude 34.0522, Longitude -118.2437\n",
+            "3: Chicago: Latitude 41.8781, Longitude -87.6298\n",
+            "--------------------------------------------------\n",
+            "New list of cities:\n",
+            "1: New York City: Latitude 40.7128, Longitude -74.006\n",
+            "2: Los Angeles: Latitude 34.0522, Longitude -118.2437\n",
+            "3: Chicago: Latitude 41.8781, Longitude -87.6298\n",
+            "4: Miami: Latitude 25.7617, Longitude -80.1918\n",
+            "--------------------------------------------------\n",
+            "First two cities:\n",
+            "1: New York City: Latitude 40.7128, Longitude -74.006\n",
+            "2: Los Angeles: Latitude 34.0522, Longitude -118.2437\n"
+          ]
+        }
+      ],
+      "source": [
+        "# **********************************************************************************************\n",
+        "# * Name:   exercise_03.py\n",
+        "# * Author: Teo Espero\n",
+        "# *         MAS-GIT\n",
+        "# * Date written:   01/17/2026\n",
+        "# * Description:    This is to demonstrate the use of tuples and how they are accessed and\n",
+        "# *                 manipulated.\n",
+        "# **********************************************************************************************\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - Declare our data types\n",
+        "# -------------------------------------------------------\n",
+        "\n",
+        "# - tuple for cities\n",
+        "my_cities = [\n",
+        "    (\"New York City\", 40.7128, -74.0060),\n",
+        "    (\"Los Angeles\", 34.0522, -118.2437),\n",
+        "    (\"Chicago\", 41.8781, -87.6298)\n",
+        "]\n",
+        "\n",
+        "# - counter to indicate the line number\n",
+        "ctr = 0\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - Print the original list of cities\n",
+        "# -------------------------------------------------------\n",
+        "print(\"--------------------------------------------------\")\n",
+        "print(\"Original list of cities:\")\n",
+        "for city, lat, lon in my_cities:\n",
+        "    ctr += 1\n",
+        "    print(f\"{ctr}: {city}: Latitude {lat}, Longitude {lon}\")\n",
+        "\n",
+        "ctr = 0\n",
+        "# -------------------------------------------------------\n",
+        "# - Add another city\n",
+        "# -------------------------------------------------------\n",
+        "my_cities.append((\"Miami\", 25.7617, -80.1918))\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - Print the new  list of cities\n",
+        "# -------------------------------------------------------\n",
+        "print(\"--------------------------------------------------\")\n",
+        "print(\"New list of cities:\")\n",
+        "for city, lat, lon in my_cities:\n",
+        "    ctr += 1\n",
+        "    print(f\"{ctr}: {city}: Latitude {lat}, Longitude {lon}\")\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - Slice the list to get the first two cities,\n",
+        "#   then print them\n",
+        "# -------------------------------------------------------\n",
+        "first_two_cities = my_cities[:2]\n",
+        "ctr = 0\n",
+        "print(\"--------------------------------------------------\")\n",
+        "print(\"First two cities:\")\n",
+        "for sliced_city, sliced_lat, sliced_lon in first_two_cities:\n",
+        "    ctr += 1\n",
+        "    print(f\"{ctr}: {sliced_city}: Latitude {sliced_lat}, Longitude {sliced_lon}\")\n",
+        "\n",
+        "# -------------------------------------------------------\n",
+        "# - EOF\n",
+        "# -------------------------------------------------------\n"
+      ]
     },
     {
       "cell_type": "markdown",
